Increase timeout values for subgit import